# ObiAgent

./: .gitignore  render.yaml  setup_env.py
backend/: DEEP_RESEARCH_WORKFLOW_SUMMARY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README-zh.md  README.md  TEST_RESULTS_SUMMARY.md  TODO.md  __init__.py  conftest.py  deep_research_demo.py  demo.py  demo_flight_search.py  demo_flight_workflow.py  discord_demo_flow.py  logging_config.py  main.py  plan.md  pyproject.toml  pytest.ini  requirements.txt  server.py  test_agent.py  test_flight_search.py  test_flight_search_realistic.py  test_flight_search_simple.py  test_imports.py  test_logging.py  test_preference_filtering.py  work.md
backend/agent/: ARCADE_FIXES.md  GITHUB_CI_FIXES.md  INDENTATION_FIX.md  README_ARCADE.md  __init__.py  flow.py  nodes.py
backend/agent/config/: __init__.py  function_nodes.json
backend/agent/docs/: arcade_integration.md
backend/agent/function_nodes/: __init__.py  (+30 more)
backend/docs/: flight_search_usage.md
backend/static/: index.html
backend/tests/: README.md  __init__.py  conftest.py  pytest.ini  test_agent.py  test_agent_improved.py  test_edge_cases.py  test_function_nodes_improved.py  test_imports.py  test_integration.py  test_logging.py  test_performance.py  test_security.py  test_utils.py
backend/workflow_demo/: DEMO_SUMMARY.md  README.md  content_research_demo.py  customer_support_demo.py  run_demos.py  simple_email_demo.py  social_media_demo.py  team_communication_demo.py
backend/workflows/: 0437e5d0f905.json  8e26e920fe5a.json  a75928251ac5.json  cce047fcc3d4.json  e264703ba862.json
(+29 files in other folders)
