[project]
name = "qorix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "google-genai>=1.2.0",
    "httpx==0.27.0",
    "httpx-ws>=0.5.1",
    "openai==1.3.8",
    "pocketflow>=0.0.2",
    "uvicorn[standard]==0.24.0",
]
