[project]
name = "qorix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]==0.24.0",
    "openai==1.3.8",
    "httpx>=0.28.1,<1.0.0",
    "pocketflow",
    "httpx-ws>=0.6.2",
    "pyyaml==6.0.1",
    "google-generativeai==0.3.2",
    "python-multipart==0.0.6",
    "pytest>=8.4.1",
    "pytest-asyncio==1.0.0",
    "duckduckgo-search>=7.5.2",
    "google-genai>=1.23.0",
]
